提交一波代码

--- a/aspnet-core/src/Clare.ECommerce.Core/Localization/SourceFiles/ECommerce-zh-CN.xml
+++ b/aspnet-core/src/Clare.ECommerce.Core/Localization/SourceFiles/ECommerce-zh-CN.xml
@@ -3,6 +3,7 @@
   <texts>
     <text name="HomePage" value="主页" />
     <text name="About" value="关于我们" />
+    <text name="Active" value="激活" />
     <text name="WellcomeMessage" value="欢迎使用 ECommerce!" />
     <text name="FormIsNotValidMessage" value="部分输入信息不符合要求，请检查并改正.." />
     <text name="TenantNameCanNotBeEmpty" value="租户名不能为空" />
@@ -70,6 +71,7 @@
     <text name="EditTenant">编辑租户</text>
     <text name="EditUser">编辑用户</text>
     <text name="TenantIdIsNotActive{0}">租户 {0} 尚未激活</text>
+    <text name="UnActive">未激活</text>
     <text name="UnknownTenantId{0}">不存在的租户 {0}</text>
     <text name="ThisFieldIsRequired">此处必填</text>
     <text name="PleaseWait">请稍候...</text>
